Stable versions
---------------

4.3.13 ():
	- fix MOD vs XM set finetune effect
	- fix IT old instrument volume
	- fix IT panbrello speed
	- fix IT default pan in new instrument (reported by Hai Shalom)
	- fix S3M X effect in Impulse modules (reported by Hai Shalom)
	- code refactoring and cleanup

4.3.12 (20160305):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT note off with instrument
	- fix IT note recover after cut
	- fix IT instrument without note after note cut event
	- fix IT pan reset on new note instead of new instrument
	- fix IT volume swing problems
	- fix XM glissando effect
	- fix Scream Tracker 3 period limits
	- fix Scream Tracker 3 tremolo memory
	Other changes:
	- fix IT pattern break in hexadecimal (reported by StarFox008)
	- fix S3M subsong detection (reported by knight-ryu12)
	- fix S3M/IT special marker handling (reported by knight-ryu12)
	- fix Galaxy Music System 4.0 song length (reported by AntonZab)
	- fix tone portamento memory without note (reported by NoSuck)
	- fix IT pan swing limits
	- Add TrackerPacker v1 format converter
	- Add TrackerPacker v2 format converter
	- Add ProPacker 1.0 format converter

4.3.11 (20160212):
	Fix bugs caught in the OpenMPT test cases:
	- fix FT2 XM arpeggio clamp
	- fix FT2 XM arpeggio + pitch slide
	- fix XM tremor effect handling
	- fix XM tremor recover after volume setting
	- fix IT instrument after keyoff
	- fix S3M first frame test in pattern delay
	- fix Protracker tone portamento target setting
	- fix Protracker arpeggio wraparound
	- fix Protracker finetune setting
	Other changes:
	- fix range of MMD effect 9 (reported by Lamar McLouth)
	- fix Visual C++ build (reported by Jochen Goernitz)
	- fix invalid sample offset handling in Skale Tracker XM (reported by
	  Vladislav Suschikh)
	- fix Protracker sample loop to use full repeat only if start is 0
	- fix Scream Tracker 4-channel MOD fingerprinting
	- fix lite build with IT support disabled
	- fix build with gcc 2.95 in Haiku
